--- a/src/main/resources/templates/registerPage.html
+++ b/src/main/resources/templates/registerPage.html
@@ -13,6 +13,8 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 	crossorigin="anonymous"></script>
+
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
 	<br>
@@ -22,11 +24,10 @@
 				<h3>Product Register Form</h3>
 			</div>
 			<div class="card-body">
-				<form th:action="@{/product/save}" method="post" th:object="${www}">
-					
+				<form th:action="@{/product/save}" method="post" th:object="${product}">
+
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Product
-							Name :</label>
+						<label class="col-sm-2 col-form-label">Product Name :</label>
 						<div class="col-sm-6">
 							<input type="text" class="form-control" th:field="*{ProductName}" />
 						</div>
@@ -34,8 +35,7 @@
 					<br>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">ProductDesc
-							:</label>
+						<label class="col-sm-2 col-form-label">ProductDesc :</label>
 						<div class="col-sm-6">
 							<input type="text" class="form-control" th:field="*{ProductDesc}" />
 						</div>
@@ -43,34 +43,28 @@
 					<br>
 
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">ProductPrice
-							:</label>
+						<label class="col-sm-2 col-form-label">ProductPrice :</label>
 						<div class="col-sm-6">
 							<input type="text" class="form-control"
 								th:field="*{ProductPrice}" />
 						</div>
-					</div><br>
-					
-					 <div class="form-group row">
-						<label class="col-sm-2 col-form-label">Captcha :</label>
-						<div class="col-sm-6">
-							 <img th:src="*{'data:realCaptcha/jpg;base64,'+ realCaptcha}"/>							 
-						</div>
-					</div><br>
-					
+					</div>
+					<br>
+
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label">Enter Captcha :</label>
+						<label class="col-sm-2 col-form-label"> Validate :</label>
 						<div class="col-sm-6">
-						<input type="hidden" th:field="*{hiddenCaptcha}"/>
-							<input type="text" th:field="*{captcha}" class="form-control"/>
+							<div class="g-recaptcha"
+								data-sitekey="6Lcpgz0iAAAAADfakZ0zd-q1hefgrXODEUdF3qlq"></div>
 						</div>
-					</div><br>
-					<input type="submit" value="Add Product" class="form-control btn btn-success"/>
+					</div>
+					<br> <input type="submit" value="Add Product"
+						class="form-control btn btn-success" />
 				</form>
-			</div>   <!-- Card Body -->
-	<!-- 	<div th:if="${message!=null}" class="card-footer bg-info text-white>
-			<span th:text="${message}"></span>
-			</div> -->
+			</div>
+			<div th:if="${message!=null}" class="card-footer bg-info text-white">
+				<span class="alert alert-danger" th:text="${message}"></span>
+			</div>
 		</div>
 	</div>
 </body>
